# rules_rust

./: cargo.html  cargo_settings.html  crate_universe_bzlmod.html  external_crates.html  index.html  print.html  rust.html  rust_analyzer.html  rust_bindgen.html  rust_bzlmod.html  rust_fmt.html  rust_mdbook.html  rust_prost.html  rust_settings.html  rust_toolchains.html  rust_wasm_bindgen.html  searchindex.js  searchindex.json  toc.html  toc.js  upstream_tooling.html
.bazelci/: presubmit.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cargo/private/: cargo_build_script.bzl
cargo/private/cargo_build_script_runner/: bin.rs  lib.rs
crate_universe/private/: urls.bzl
crate_universe/tests/integration/complicated_dependencies/: MODULE.bazel
crate_universe/tests/integration/multi_package/: MODULE.bazel
docs/src/: rust_analyzer.md
examples/all_crate_deps/: MODULE.bazel
examples/bazel_env/: MODULE.bazel
examples/cross_compile/: MODULE.bazel
examples/cross_compile_llvm/: MODULE.bazel  README.md
examples/cross_compile_musl/: MODULE.bazel
examples/cross_compile_nix/: MODULE.bazel
examples/ffi/: MODULE.bazel
examples/hello_world/: MODULE.bazel
examples/ios_build/: MODULE.bazel
examples/override_target/: MODULE.bazel
examples/sys/: MODULE.bazel
extensions/bindgen/: MODULE.bazel
extensions/mdbook/: MODULE.bazel
extensions/mdbook/private/: mdbook.bzl  process_wrapper.rs
extensions/mdbook/test/external_srcs/: BUILD.bazel  external_srcs_test.rs
extensions/mdbook/test/external_srcs/content/: BUILD.bazel  book.toml
extensions/mdbook/test/external_srcs/content/src/: SUMMARY.md  test.md
extensions/mdbook/test/external_srcs/local_book_mixed/: BUILD.bazel  book.toml
extensions/mdbook/test/plugins/: BUILD.bazel  book.toml  mdbook_test_preprocessor.rs  plugins_test.rs
extensions/mdbook/test/plugins/src/: SUMMARY.md  index.md
extensions/mdbook/test/stitched/: BUILD.bazel  book.toml
extensions/mdbook/test/stitched/other_srcs/: BUILD.bazel  chapter_2.md
extensions/mdbook/test/stitched/src/: BUILD.bazel  SUMMARY.md  chapter_1.md
extensions/prost/: MODULE.bazel
extensions/pyo3/: MODULE.bazel
extensions/wasm_bindgen/: MODULE.bazel
rust/: toolchain.bzl
rust/platform/: triple_mappings.bzl
rust/private/: clippy.bzl  rustc.bzl  unpretty.bzl
test/integration/cc_common_link/: MODULE.bazel
test/integration/cc_common_link_with_global_alloc/: MODULE.bazel
test/integration/no_std/: MODULE.bazel
test/integration/unstable_rust_features/: MODULE.bazel
test/unit/clippy/: clippy_test.bzl
test/unit/location_expansion/: location_expansion_test.bzl
test/unit/native_deps/: native_deps_test.bzl
util/fetch_shas/: fetch_shas_TARGETS.txt
util/process_wrapper/: options.rs
